.playlist-container now has .editing class when editing so that we can style it differently (we want smaller margins when displayed in edit playlist modal). Edit playlist modal now has fixed positioning when collapsed (always at bottom of screen) and absolute positioning when expanded (so we can scroll if its taller than screen height)

--- a/app/styles/elements/_playlist.scss
+++ b/app/styles/elements/_playlist.scss
@@ -7,6 +7,14 @@ margin-top: 50px;
 float: right;
 }
 
+.playlist-container.editing {
+  margin-left: 10%;
+  min-width: 54%;
+  margin-right: 10%;
+  margin-bottom: 2em;
+  margin-top: 2em;
+}
+
 .playlist-container {
 
   position: relative;
